--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
 <h1> Esta es mi primera página con GitHub Pages </h1>
+<h2> ENCUENTRO EN ESTA, UNA HERRAMIENTA MUY ÚTIL Y VERSATIL </h1>
 <p>¡Gracias GitHub!</p>
 </html>
